WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285793
Fix GPU process painting of form controls in sideways-lr writing mode
https://bugs.webkit.org/show_bug.cgi?id=285793
Summary
Fix GPU process painting of form controls in sideways-lr writing mode
Tim Nguyen (:ntim)
Reported
2025-01-10 19:41:50 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-10 19:42:00 PST
<
rdar://problem/142725048
>
Tim Nguyen (:ntim)
Comment 2
2025-01-10 19:44:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38889
EWS
Comment 3
2025-01-11 15:43:52 PST
Committed
288766@main
(e127e21c8292): <
https://commits.webkit.org/288766@main
> Reviewed commits have been landed. Closing PR #38889 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug