Fix GPU process painting of form controls in sideways-lr writing mode https://bugs.webkit.org/show_bug.cgi?id=285793 rdar://142725048

Reviewed by Aditya Keerthi.

Pass `writingMode().isInlineFlipped()` instead of `style().isRightToLeftDirection()`, in order to paint
in the correct direction in sideways-lr writing mode.

* Source/WebCore/platform/graphics/adwaita/MenuListAdwaita.cpp:
(WebCore::MenuListAdwaita::draw):
* Source/WebCore/platform/graphics/adwaita/ProgressBarAdwaita.cpp:
(WebCore::ProgressBarAdwaita::draw):
* Source/WebCore/platform/graphics/adwaita/SliderTrackAdwaita.cpp:
(WebCore::SliderTrackAdwaita::draw):
* Source/WebCore/platform/graphics/adwaita/TextFieldAdwaita.cpp:
(WebCore::TextFieldAdwaita::draw):
* Source/WebCore/platform/graphics/controls/ControlStyle.cpp:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/controls/ControlStyle.h:
* Source/WebCore/platform/graphics/controls/SliderTrackPart.cpp:
(WebCore::SliderTrackPart::drawTicks const):
* Source/WebCore/platform/graphics/mac/controls/ControlMac.mm:
(WebCore::ControlMac::drawListButton):
* Source/WebCore/platform/graphics/mac/controls/MenuListButtonMac.mm:
(WebCore::MenuListButtonMac::draw):
* Source/WebCore/platform/graphics/mac/controls/MenuListMac.mm:
(WebCore::MenuListMac::updateCellStates):
* Source/WebCore/platform/graphics/mac/controls/MeterMac.mm:
(WebCore::MeterMac::updateCellStates):
* Source/WebCore/platform/graphics/mac/controls/ProgressBarMac.mm:
(WebCore::ProgressBarMac::draw):
* Source/WebCore/platform/graphics/mac/controls/SwitchThumbMac.mm:
(WebCore::SwitchThumbMac::draw):
* Source/WebCore/platform/graphics/mac/controls/SwitchTrackMac.mm:
(WebCore::SwitchTrackMac::draw):
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::extractControlStyleStatesForRendererInternal const):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/288766@main