Source/WebCore/platform/graphics/adwaita/TextFieldAdwaita.cpp
@@ -87,7 +87,7 @@ void TextFieldAdwaita::draw(GraphicsContext& graphicsContext, const FloatRounded
     if (style.states.contains(ControlStyle::State::ListButton)) {
         auto zoomedArrowSize = menuListButtonArrowSize * style.zoomFactor;
         FloatRect arrowRect = borderRect.rect();
-        if (style.states.contains(ControlStyle::State::RightToLeft))
+        if (style.states.contains(ControlStyle::State::InlineFlippedWritingMode))
             arrowRect.move(textFieldBorderSize * 2, 0);
         else
             arrowRect.move(arrowRect.width() - (zoomedArrowSize + textFieldBorderSize * 2), 0);
